# scalable-key-value-store

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  kv_store.pb.cc
client/db/: NodeManager.cpp  NodeManager.h  kvstore.cpp  kvstore.h
client/include/: blockingqueue.h  common.h  global.h  kv_client_impl.h  kvclient.h  memoryallocator.h  message.h
client/proto/: kv_store.proto
client/src/: blockingqueue.cpp  client_app.cpp  global.cpp  kv_client_impl.cpp  kvclient.cpp  kvclient.h
client/test/: availability.cpp  generate.sh  raft_config.txt  test_kv739_die.cpp
client/transport/: rpc_client.cpp  rpc_client.h
proto/: kv_store.proto
server/: .gitignore  README.md  config.txt  pom.xml
server/scripts/: build_all.sh
server/server/: config.txt  pom.xml
server/server/src/main/java/com/kvstore/raft/: RaftNode.java  RaftState.java
server/server/src/main/java/com/kvstore/server/: KVStoreServer.java  KVStoreServiceImpl.java
server/server/src/main/java/com/kvstore/storage/: SQLiteStorage.java
server/server/src/test/java/com/kvstore/raft/: RaftNodeTest.java
server/server/src/test/java/com/kvstore/server/: KVStoreServiceImplTest.java
server/src/main/java/com/kvstore/client/: CMakeLists.txt
server/src/main/java/com/kvstore/client/src/: CMakeLists.txt  kvclient.cpp  kvclient.hpp  kvclientimpl.cpp
server/src/main/java/com/kvstore/config/: ServerConfig.java
server/src/main/java/com/kvstore/raft/: LogEntry.java  RaftNode.java  RaftState.java
server/src/main/java/com/kvstore/server/: KVStoreServer.java  KVStoreServiceImpl.java
server/src/main/java/com/kvstore/storage/: KVStorage.java  PersistentStorage.java  SQLiteStorage.java
server/src/main/proto/: kv_store.proto  raft.proto
server/src/main/scripts/: setup_all.sh
server/src/test/java/com/kvstore/raft/: RaftNodeTest.java  RaftStateTest.java
server/src/test/java/com/kvstore/server/: KVStoreServiceImplTest.java
server/src/test/java/com/kvstore/storage/: KVStorageTest.java  PersistentStorageTest.java  SQLiteStorageTest.java
tools/: setup.sh
